<resources>

    <string name="app_name">My First App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchprop">Search Your Property Here</string>
    <string name="edit_message">Enter Text</string>
    <string name="add">Address*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="searchbutt">Search</string>
    <string name="proptyp">PropertyType</string>

    <string-array name="states_array">
        <item>Choose State</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_tab1">Tab1Activity</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="prev">Previous</string>
        <string name="next">Next</string>
        <string name="facebook_app_id">384951338327449</string>
    

</resources>
